--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/apartment_system?serverTimezone=Asia/Shanghai&autoReconnect=true&useSSL=false&characterEncoding=utf8&useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=123456789
+
+mybatis.mapper-locations=classpath:/mapper/**Mapper.xml
+#logging.level.root=debug
+#logging.level.org.springframework.web=ERROR
+#logging.level.org.apache=ERROR
