--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/apartment_system?serverTimezone=Asia/Shanghai&autoReconnect=true&useSSL=false&characterEncoding=utf8&useUnicode=true
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=wang
 
 mybatis.mapper-locations=classpath:/mapper/**Mapper.xml
 #logging.level.root=debug
