--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>2.3.0.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
