--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,21 @@ mybatis.mapper-locations=classpath:/mapper/**Mapper.xml
 #logging.level.root=debug
 #logging.level.org.springframework.web=ERROR
 #logging.level.org.apache=ERROR
+#redis配置
+
+#Redis服务器地址
+spring.redis.host=127.0.0.1
+#Redis服务器连接端口
+spring.redis.port=6379
+#Redis数据库索引（默认为0）
+spring.redis.database=0
+#连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=50
+#连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=3000
+#连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=20
+#连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=2
+#连接超时时间（毫秒）
+spring.redis.timeout=5000
